Add section about method handles